First implementation of ply reader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ file(GLOB SOURCES
     src/utils/*.cpp
     src/meshes/*.cpp
     src/k_d_tree/*.cpp
-    src/readers/*.cpp
+    src/mesh_readers/*.cpp
     src/*.cpp
 )
 add_library(Library OBJECT ${SOURCES})
