--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,4 +12,10 @@ foreach(TEST_FILE ${TEST_SOURCES})
     add_executable(${TEST_NAME} ${TEST_FILE})
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
     target_link_libraries(${TEST_NAME} CATCH_STATIC Library)
+
+    if (${TEST_NAME} MATCHES "benchmark$")
+        set_tests_properties(${TEST_NAME} PROPERTIES LABELS "benchmark")
+    else()
+        set_tests_properties(${TEST_NAME} PROPERTIES LABELS "unittest")
+    endif()
 endforeach(TEST_FILE ${TEST_SOURCES})
