--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ foreach(TEST_FILE ${TEST_SOURCES})
     get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
     add_executable(${TEST_NAME} ${TEST_FILE})
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
-    target_link_libraries(${TEST_NAME} CATCH_STATIC Library)
+    target_link_libraries(${TEST_NAME} PRIVATE CATCH_STATIC rmilib)
 
     if (${TEST_NAME} MATCHES "benchmark$")
         set_tests_properties(${TEST_NAME} PROPERTIES LABELS "benchmark")
