--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(RAY_MESH_INTERSECTION)
 
 if (CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
+elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
     set(CMAKE_CXX_FLAGS "/std:c++17")
 endif()
@@ -12,12 +14,15 @@ endif()
 include_directories(external/)
 add_subdirectory(src/)
 if (BUILD_TESTS)
+    message("Include tests")
     enable_testing()
     add_subdirectory(test)
 endif()
 if (BUILD_QT_APP)
+    message("Include QT desktop application")
     add_subdirectory(app)
 endif()
 if (BUILD_WASM)
+    message("Include WASM")
     add_subdirectory(web)
 endif()
