Added option to choose backend for parallel execution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,15 +14,15 @@ endif()
 include_directories(external/)
 add_subdirectory(src/)
 if (BUILD_TESTS)
-    message("Include tests")
+    message(STATUS "Include tests")
     enable_testing()
     add_subdirectory(test)
 endif()
 if (BUILD_QT_APP)
-    message("Include QT desktop application")
+    message(STATUS "Include QT desktop application")
     add_subdirectory(app)
 endif()
 if (BUILD_WASM)
-    message("Include WASM")
+    message(STATUS "Include WASM")
     add_subdirectory(web)
 endif()
