Fix compilation on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,13 @@ project(RAY_MESH_INTERSECTION)
 
 if (CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-    set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
-elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    if (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
+        set(CMAKE_CXX_FLAGS "/std:c++17")
+    elseif (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
+        set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
+    endif()
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     set(CMAKE_CXX_FLAGS "/std:c++17")
 endif()
 
