--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,19 @@
 cmake_minimum_required(VERSION 3.5)
 project(RAY_MESH_INTERSECTION)
 
+set(CXX_MSVC_FLAGS "/std:c++17 /O2")
+set(CXX_GNU_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
 
 if (CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
+    set(CMAKE_CXX_FLAGS ${CXX_GNU_FLAGS})
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     if (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
-        set(CMAKE_CXX_FLAGS "/std:c++17")
+        set(CMAKE_CXX_FLAGS ${CXX_MSVC_FLAGS})
     elseif (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
-        set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
+        set(CMAKE_CXX_FLAGS ${CXX_GNU_FLAGS})
     endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    set(CMAKE_CXX_FLAGS "/std:c++17")
+    set(CMAKE_CXX_FLAGS ${CXX_MSVC_FLAGS})
 endif()
 
 
