--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,21 @@
 cmake_minimum_required(VERSION 3.5)
 project(RAY_MESH_INTERSECTION)
 
-set(CXX_MSVC_FLAGS "/std:c++17 /O2 /EHsc")
-set(CXX_GNU_FLAGS "-Wall -Wextra -pedantic -O2 -std=c++17")
+set(CXX_MSVC_FLAGS /std:c++17 /O2 /EHsc)
+set(CXX_GNU_FLAGS -Wall -Wextra -pedantic -O2 -std=c++17)
+set(header_path "${RAY_MESH_INTERSECTION_SOURCE_DIR}/include/rmilib")
+set(src_path "${RAY_MESH_INTERSECTION_SOURCE_DIR}/src")
 
 if (CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS ${CXX_GNU_FLAGS})
+    add_compile_options(${CXX_GNU_FLAGS})
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     if (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
-        set(CMAKE_CXX_FLAGS ${CXX_MSVC_FLAGS})
+        add_compile_options(${CXX_MSVC_FLAGS})
     elseif (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
-        set(CMAKE_CXX_FLAGS ${CXX_GNU_FLAGS})
+        add_compile_options(${CXX_GNU_FLAGS})
     endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    set(CMAKE_CXX_FLAGS ${CXX_MSVC_FLAGS})
+    add_compile_options(${CXX_MSVC_FLAGS})
 endif()
 
 
