--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.9)
 project(RAY_MESH_INTERSECTION)
 
 
@@ -8,6 +8,12 @@ set(src_path "${RAY_MESH_INTERSECTION_SOURCE_DIR}/src")
 
 set(CXX_MSVC_FLAGS /std:c++17 /O2 /EHsc)
 set(CXX_GNU_FLAGS -Wall -Wextra -pedantic -O2 -std=c++17)
+
+
+if (INCLUDE_OMP)
+    find_package(OpenMP REQUIRED)
+    string(APPEND CXX_MSVC_FLAGS /openmp:llvm)
+endif()
 
 
 if (CMAKE_COMPILER_IS_GNUCXX)
@@ -20,11 +26,6 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     endif()
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     add_compile_options(${CXX_MSVC_FLAGS})
-endif()
-
-
-if (INCLUDE_OMP)
-    find_package(OpenMP REQUIRED)
 endif()
 
 
