--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.29)
 project(RAY_MESH_INTERSECTION)
 
 
@@ -6,13 +6,13 @@ set(header_path "${RAY_MESH_INTERSECTION_SOURCE_DIR}/include/rmilib")
 set(src_path "${RAY_MESH_INTERSECTION_SOURCE_DIR}/src")
 
 
-set(CXX_MSVC_FLAGS /std:c++17 /O2 /EHsc)
-set(CXX_GNU_FLAGS -Wall -Wextra -pedantic -O2 -std=c++17)
+set(CXX_MSVC_FLAGS "/std:c++17;/O2;/EHsc")
+set(CXX_GNU_FLAGS "-Wall;-Wextra;-pedantic;-O2;-std=c++17")
 
 
 if (INCLUDE_OMP)
     find_package(OpenMP REQUIRED)
-    string(APPEND CXX_MSVC_FLAGS /openmp:llvm)
+    string(APPEND CXX_MSVC_FLAGS ";/openmp:llvm")
 endif()
 
 
