--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,25 +8,19 @@ set(src_path "${RAY_MESH_INTERSECTION_SOURCE_DIR}/src")
 
 set(CXX_MSVC_FLAGS "/std:c++17;/O2;/EHsc")
 set(CXX_GNU_FLAGS "-Wall;-Wextra;-pedantic;-O2;-std=c++17")
+set(CXX_CLANG_FLAGS "-Wall;-Wextra;-pedantic;-O2;-std=c++17")
 
 
 if (INCLUDE_OMP)
     find_package(OpenMP REQUIRED)
-    string(APPEND CXX_MSVC_FLAGS ";/openmp:llvm")
 endif()
 
 
-if (CMAKE_COMPILER_IS_GNUCXX)
-    add_compile_options(${CXX_GNU_FLAGS})
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    if (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
-        add_compile_options(${CXX_MSVC_FLAGS})
-    elseif (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
-        add_compile_options(${CXX_GNU_FLAGS})
-    endif()
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    add_compile_options(${CXX_MSVC_FLAGS})
-endif()
+add_compile_options(
+    "$<$<CXX_COMPILER_ID:GNU>:-Wall;-Wextra;-pedantic;-O2;-std=c++17>"
+    "$<$<CXX_COMPILER_ID:Clang>:-Wall;-Wextra;-pedantic;-O2;-std=c++17>"
+    "$<$<CXX_COMPILER_ID:MSVC>:/std:c++17;/O2;/EHsc>"
+)
 
 
 include_directories(external/)
