--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,8 +11,10 @@ set(LIBS CATCH_STATIC rmilib)
 set(DEFS "")
 
 if (INCLUDE_OMP)
-    set(OpenMP_RUNTIME_MSVC llvm)
     find_package(OpenMP REQUIRED)
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+        set(OpenMP_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp:llvm")
+    endif()
     list(APPEND LIBS OpenMP::OpenMP_CXX)
     list(APPEND DEFS RMI_INCLUDE_OMP)
 endif()
