Remove append to LIBS

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,11 +11,12 @@ set(LIBS CATCH_STATIC rmilib)
 set(DEFS "")
 
 if (INCLUDE_OMP)
-    find_package(OpenMP REQUIRED)
     if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp:llvm")
+    else()
+        find_package(OpenMP REQUIRED)
+        list(APPEND LIBS OpenMP::OpenMP_CXX)
     endif()
-    list(APPEND LIBS OpenMP::OpenMP_CXX)
     list(APPEND DEFS RMI_INCLUDE_OMP)
 endif()
 
